Adicionado trailer nas informaões do game

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Activity.Information_activity"></activity>
+        <activity android:name=".Activity.Information_activity" />
     </application>
 
 </manifest>
